--- a/Sistem_Informasi_Sekolah.csproj
+++ b/Sistem_Informasi_Sekolah.csproj
@@ -28,4 +28,9 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="JadwalPelajaran\DbDal\" />
+    <Folder Include="JadwalPelajaran\Model\" />
+  </ItemGroup>
+
 </Project>
